@@ -3,6 +3,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==07/10/2009==
 Trevius: (Zeice) Added #mystats command as an alternative to #showstats that only shows stats for the client or it's own pet.
 WildcardX: Migrated more code from EQBOTS to BOTS. The BOT code is less buggy than last iteration and now has even more active features that can be tested but there is a known issue or two I am aware of and working to correct.
+KLS: Fix for fear not wearing off properly.
+KLS: Small tweaks to npc spell ai.
 
 ==07/09/2009==
 WildcardX: Migrated more code from EQBOTS to BOTS. The BOTS code can do basic functions now but its still "buggy" compared to EQBOTS until migration/integration is complete.
